# thank-you-places

./: db.sqlite3  package.json  pyproject.toml  requirements.txt
backend/: schema.py  settings.py  urls.py
public/: index.html
shows/: models.py  schema.py
shows/migrations/: 0001_initial.py  0002_auto_20200524_2256.py  0003_show_posted_by.py
src/: Root.js  index.js  withRoot.js
src/components/Auth/: Login.js  Register.js  Signout.js  index.js
src/components/Shared/: Error.js  Header.js  Loading.js
src/components/Show/: CreateShow.js  DeleteShow.js  SearchShows.js  ShowList.js  UpdateShow.js
src/pages/: App.js  Profile.js
users/: schema.py
