[tool.poetry]
name = "thank-you-places"
version = "0.1.0"
description = ""
authors = ["Joe Szaf <joeszaf+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.9"
djangorestframework = "^3.11.0"
whitenoise = "^5.1.0"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
graphene-django = "^2.10.1"
django-graphql-jwt = "^0.3.1"
django-cors-headers = "^3.3.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
